--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <title>Sleazy Adventure Club</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.compat.css" />
     <style>
         @font-face {
             font-family: font;
@@ -23,38 +24,7 @@
         .hidden {
             display: none;
         }
-    </style>
-</head>
 
-<body>
-    <section class="hero">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 first-slid">
-                    <div class="button-area">
-                        <a style="cursor: pointer;" class="connect_btn"><img class="button-head"
-                                src="./assets/buttons -03.png" alt=""></a>
-                        <a href="http://twitter.com/sleazy_sloths" target="_blank"><img style="margin-top: 30px;"
-                                class="social-link" src="./assets/images/twitter.png" alt=""></a>
-                    </div>
-                    <div class="hero-section">
-                        <div class="hero-img">
-                            <img class="" src="./assets/images/Hero_photo.png" alt="">
-                        </div>
-                        <div class="hero-text">
-                            <a href="#">
-                                <img src="./assets/images/Asset 1.png" alt="">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <div class="stitch">
-
-    </div>
-    <style>
         a {
             font-family: 'font';
             cursor: pointer;
@@ -80,18 +50,68 @@
             display: flex;
         }
 
-        #mint_count{
+        #mint_count {
             color: white;
             font-size: 3rem;
             font-weight: 700;
         }
 
-        .btns{
+        .btns {
             padding-top: 20px;
             cursor: pointer;
         }
+
+        html, body{
+            overflow: hidden;
+        }
     </style>
-    <section class="mint-section">
+</head>
+
+<body>
+
+    
+    <div class="floatingBtns">
+        <div class="col-md-12 mx-auto text-center">
+            <div class="row mx-auto text-center">
+                <div class="col-4">
+                    <button class="text-center btns" id="homeShowBtn">Home</button>
+                </div>
+                <div class="col-4">
+                    <button class="text-center btns" id="mintShowBtn">Mint</button>
+                </div>
+                <div class="col-4">
+                    <button class="text-center btns" id="roadmapShowBtn">Roadmap</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <section class="secs hero">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 first-slid">
+                    <div class="button-area">
+                        <a style="cursor: pointer;" class="connect_btn"><img class="button-head"
+                                src="./assets/buttons -03.png" alt=""></a>
+                        <a href="http://twitter.com/sleazy_sloths" target="_blank"><img style="margin-top: 30px;"
+                                class="social-link" src="./assets/images/twitter.png" alt=""></a>
+                    </div>
+                    <div class="hero-section">
+                        <div class="hero-img">
+                            <img class="" src="./assets/images/Hero_photo.png" alt="">
+                        </div>
+                        <div class="hero-text">
+                            <a href="#">
+                                <img src="./assets/images/Asset 1.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="hidden secs mint-section">
         <div class="row">
             <div class="col-md-12 first-slid">
                 <div class="hero-section">
@@ -148,10 +168,7 @@
 
     </section>
 
-    <div class="stitch">
-    </div>
-
-    <section class="roadmap-section">
+    <section class="hidden secs roadmap-section">
         <div class="row">
             <div class="col-md-12 first-slid">
                 <div class="container">
@@ -203,6 +220,7 @@
             </div>
         </div>
     </section>
+
     <div style="display: none;" id="root"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 
@@ -212,6 +230,53 @@
     <script src="https://unpkg.com/@walletconnect/web3-provider"></script>
     <script src="js/integration.js"></script>
     <script src="js/main.js"></script>
+    <style>
+        .floatingBtns{
+            position: absolute;
+            bottom: 10px;
+            width: 100%;
+            padding-bottom: 20px;
+        }
+
+        .btns{
+            border-radius: 20px;
+            border: 2px solid black;
+            padding: 3px 10px 3px 10px;
+            background-color: rgba(0, 0, 0, 0.612);
+            color: white;
+            font-weight: 700;
+        }
+    </style>
+    <script>
+        $(document).ready(() => {
+
+            const mintSection = $('.mint-section');
+            const homeSection = $('.hero');
+            const roadmapSection = $('.roadmap-section');
+            const allSection = $('.secs')
+
+            homeSection.removeClass('hidden')
+
+            $('#mintShowBtn').click(() => {
+                allSection.hide()
+                mintSection.addClass("animate__animated animate__slideInUp")
+                mintSection.show()
+            })
+
+            $('#roadmapShowBtn').click(() => {
+                allSection.hide()
+                roadmapSection.addClass("animate__animated animate__slideInUp")
+                roadmapSection.show()
+            })
+
+            $('#homeShowBtn').click(() => {
+                allSection.hide()
+                homeSection.addClass("animate__animated animate__slideInUp")
+                homeSection.show()
+            })
+            
+        })
+    </script>
 </body>
 
 </html>
