--- a/public/index.html
+++ b/public/index.html
@@ -74,13 +74,13 @@
         <div class="col-md-12 mx-auto text-center">
             <div class="row mx-auto text-center">
                 <div class="col-4">
-                    <button class="text-center btns" id="homeShowBtn">Home</button>
+                    <button class="text-center btns2" id="homeShowBtn">Home</button>
                 </div>
                 <div class="col-4">
-                    <button class="text-center btns" id="mintShowBtn">Mint</button>
+                    <button class="text-center btns2" id="mintShowBtn">Mint</button>
                 </div>
                 <div class="col-4">
-                    <button class="text-center btns" id="roadmapShowBtn">Roadmap</button>
+                    <button class="text-center btns2" id="roadmapShowBtn">Roadmap</button>
                 </div>
             </div>
         </div>
@@ -238,7 +238,7 @@
             padding-bottom: 20px;
         }
 
-        .btns{
+        .btns2{
             border-radius: 20px;
             border: 2px solid black;
             padding: 3px 10px 3px 10px;
